--- a/app/views/homes/home.html.erb
+++ b/app/views/homes/home.html.erb
@@ -1,3 +1,25 @@
-<h1>top</h1>
+<div class="container">
+  <div class="row">
+    <div class="mx-auto">
+      <h1>
+        welcome to
+        <i class="fas fa-book"></i>
+        <strong>Bookers</strong>
+        ‼
+      </h1>
+      <p>
+         In
+         <i class="fas fa-book"></i>
+         <strong>Bookers</strong>
+         ,
+      </p>
+      <p>you can share and exchange your opinions , inpressions , and emotions</p>
+      <p>about various books!</p>
+      <div class="mx-auto col-10">
+        <%= link_to "Log in", new_user_session_path, class: "btn btn-block btn-info btn-sm" %>
+        <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-block btn-success btn-sm" %>
+      </div>
+    </div>
+  </div>
+</div>
 
-<%= link_to "Sign Up", new_user_registration_path %>
