--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="https://kit.fontawesome.com/e22e7287bf.js" crossorigin="anonymous"></script>
     <title>Bookers2</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -11,20 +12,54 @@
 
   <body>
     <header>
-      <ul>
-        <% if user_signed_in? %>
-          <li><%= link_to 'Home', user_path(current_user.id) %></li>
-          <li><%= link_to 'Users', users_path %></li>
-          <li><%= link_to 'Books', books_path %></li>
-          <li><%= link_to 'logout', destroy_user_session_path, method: :delete%></li>
-        <% else %>
-          <li><%= link_to 'Home', root_path %></li>
-          <li><%= link_to 'About', home_about_path %></li>
-          <li><%= link_to 'sign up', new_user_registration_path %></li>
-          <li><%= link_to 'login', new_user_session_path %></li>
-        <% end %>
-      </ul>
+      <nav class="navbar bg-dark navbar-expand-lg">
+        <div class="container">
+          <a href="/", class="navbar-brand text-white">Bookers</a>
+          <ul class="navbar-nav">
+            <% if user_signed_in? %>
+              <li class="nav-item"><%= link_to user_path(current_user.id), class: 'nav-link text-white' do %>
+                <span class="fas fa-home"></span> Home
+              <% end %>
+              </li>
+              <li class="nav-item "><%= link_to users_path, class: 'nav-link text-white' do %>
+                <span class="fas fa-users"></span> Users
+              <% end %>
+              </li>
+              <li class="nav-item"><%= link_to books_path, class: 'nav-link text-white' do %>
+                <span class="fas fa-book-open"></span> Books
+              <% end %>
+              </li>
+              <li class="nav-item"><%= link_to destroy_user_session_path, method: :delete, class: 'nav-link text-white' do %>
+                <span class="fas fa-sign-out-alt"></span> logout
+              <% end %>
+              </li>
+            <% else %>
+              <li class="nav-item"><%= link_to root_path, class: 'nav-link text-white' do %>
+                <span class="fas fa-home"></span> Home
+              <% end %>
+              </li>
+              <li class="nav-item"><%= link_to home_about_path, class: 'nav-link text-white' do %>
+                <span class="fas fa-link"></span> About
+              <% end %>
+              </li>
+              <li class="nav-item"><%= link_to new_user_registration_path, class: 'nav-link text-white' do %>
+                <span class="fas fa-user-plus"></span> sign up
+              <% end %>
+              </li>
+              <li class="nav-item"><%= link_to new_user_session_path, class: 'nav-link text-white' do %>
+                <span class="fas fa-sign-in-alt"></span> login
+              <% end %>
+              </li>
+            <% end %>
+          </ul>
+        </div>
+      </nav>
     </header>
     <%= yield %>
+    <footer>
+      <div class="container">
+        <p class="text-center">CopyRight Infratop.inc</p>
+      </div>
+    </footer>
   </body>
 </html>
