--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,33 +1,23 @@
 <div class="container">
   <div class="row">
-    <div class="">
-      <h2>User info</h2>
+    <%= render 'layouts/user_info', userinfo: @current_user, create_book: @create_book %>
+    <div class="col-8 offset-1">
+      <h2>Books</h2>
       <table class="table">
-        <tr><th>name</th><th><%= @current_user.name %></th></tr>
-        <tr><th>introduction</th><th></th></tr>
-      </table>
-      <%= link_to edit_user_path(current_user.id), class: "btn btn-block btn-outline-dark btn-sm" do %>
-        <i class="fas fa-user-cog"></i>
-      <% end %>
-      <h2>New book</h2>
-      <%= form_with model:@book, local: true do |f| %>
-        <label class="">title</label>
-        <%= f.text_field :title %>
-        <label class="">opinion</label>
-        <%= f.text_area :body %>
-        <%= f.submit "Create Book", class: "btn btn-success" %>
-      <% end %>
-    </div>
-    <div class="">
-      <h2>Book detail</h2>
-      <table>
+        <tr><th></th><th>title</th><th>opinion</th></tr>
         <% @books.each do |book| %>
           <tr>
-            <td><%= book.user.name %></td>
-            <td><%= book.title %></td>
+            <td>
+              <%= link_to user_path(book.user.id) do %>
+                <%= attachment_image_tag @user, :profile_image, :fill, 40, 40, fallback: "no_image.jpg", size:"40x40" %>
+              <% end %>
+            </td>
+            <td>
+              <%= link_to book_path(book.id) do %>
+                <%= book.title %>
+              <% end %>
+            </td>
             <td><%= book.body %></td>
-            <td><%= link_to "Edit", edit_book_path(book), class: "btn btn-block btn-success btn-sm" %></td>
-            <td><%= link_to "Destroy", book_path(book), method: :delete, class: "btn btn-block btn-danger btn-sm", data: { confirm: 'Are you sure？' } %></td>
           </tr>
         <% end %>
       </table>
