--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,26 @@
-<%= @book.title %>
-<%= @book.body %>
+<div class="container">
+  <div class="row">
+    <%= render 'layouts/user_info', userinfo: @current_user, create_book: @create_book %>
+    <div class="col-md-8 offset-md-1">
+      <h2>Book detail</h2>
+      <table class="table">
+          <tr>
+            <td>
+              <%= link_to user_path(@book.user.id) do %>
+                <%= attachment_image_tag @user, :profile_image, :fill, 40, 40, fallback: "no_image.jpg", size:"40x40" %><br>
+                <%= @book.user.name %>
+              <% end %>
+            </td>
+            <td>
+              <%= link_to book_path(@book.id) do %>
+                <%= @book.title %>
+              <% end %>
+            </td>
+            <td><%= @book.body %></td>
+            <td><%= link_to "Edit", edit_book_path(@book), class: "btn  btn-success btn-sm" %></td>
+            <td><%= link_to "Destroy", book_path(@book), method: :delete, class: "btn  btn-danger btn-sm", data: { confirm: 'Are you sure？' } %></td>
+          </tr>
+      </table>
+    </div>
+  </div>
+</div>
