--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,32 +1,17 @@
 <div class="container">
   <div class="row">
-    <div class="">
-      <h2>User info</h2>
-      <table class="table">
-        <tr><th>name</th><th><%= @current_user.name %></th></tr>
-        <tr><th>introduction</th><th></th></tr>
-      </table>
-      <%= link_to edit_user_path(current_user.id), class: "btn btn-block btn-outline-dark btn-sm" do %>
-        <i class="fas fa-user-cog"></i>
-      <% end %>
-      <h2>New book</h2>
-      <%= form_with model:@book, local: true do |f| %>
-        <label class="">title</label>
-        <%= f.text_field :title %>
-        <label class="">opinion</label>
-        <%= f.text_area :body %>
-        <%= f.submit "Create Book", class: "btn btn-success" %>
-      <% end %>
-    </div>
-    <div class="">
+    <%= render 'layouts/user_info', userinfo: @current_user, create_book: @create_book %>
+    <div class="col-8 offset-1">
       <h2>Users</h2>
-      <table>
-        <tr>
-          <th>image</th>
-          <th>name</th>
-        </tr>
+      <table class="table">
+        <tr><th>image</th><th>name</th><th></th></tr>
         <% @users.each do |user| %>
-          <tr><td>image</td><td><%= user.name %></td><td><%= link_to "Show", user_path(user) %></td></tr>
+          <tr>
+            <td>
+              <%= attachment_image_tag @user, :profile_image, :fill, 40, 40, fallback: "no_image.jpg", size:"40x40" %></td>
+            <td><%= user.name %></td>
+            <td><%= link_to "Show", user_path(user) %></td>
+          </tr>
         <% end %>
       </table>
     </div>
