--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,3 +1,13 @@
-<% @users.each do |user| %>
-<%= user.name %>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="mx-auto">
+      <h1>
+        welcome to
+        <i class="fas fa-book"></i>
+        <strong>Bookers</strong>
+       ‼
+      </h1>
+    </div>
+  </div>
+</div>
+
