--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <%= render 'layouts/user_info', userinfo: @current_user, create_book: @create_book %>
+    <%= render 'layouts/user_info', userinfo: @c_user, create_book: @create_book %>
     <div class="col-md-8 offset-md-1">
       <h2>Book detail</h2>
       <table class="table">
@@ -17,8 +17,10 @@
               <% end %>
             </td>
             <td><%= @book.body %></td>
-            <td><%= link_to "Edit", edit_book_path(@book), class: "btn  btn-success btn-sm" %></td>
-            <td><%= link_to "Destroy", book_path(@book), method: :delete, class: "btn  btn-danger btn-sm", data: { confirm: 'Are you sure？' } %></td>
+            <% if current_user == @book.user %>
+              <td><%= link_to "Edit", edit_book_path(@book), class: "btn  btn-success btn-sm" %></td>
+              <td><%= link_to "Destroy", book_path(@book), method: :delete, class: "btn  btn-danger btn-sm", data: { confirm: 'Are you sure？' } %></td>
+            <% end %>
           </tr>
       </table>
     </div>
