--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,6 +55,7 @@
         </div>
       </nav>
     </header>
+    <p id="notice", class="text-success"><%= notice %></p>
     <%= yield %>
     <footer>
       <div class="container">
