--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,6 +2,16 @@
   <div class="row">
     <div class="col-5 mx-auto">
       <h2>User info</h2>
+        <% if @user.errors.any? %>
+          <div class="text-danger", id="error_explanation">
+            <h2><%= pluralize(@user.errors.count, "error") %> prohibited this book from being saved:</h2>
+            <ul>
+              <% @user.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+              <% end %>
+            </ul>
+          </div>
+        <%end%>
       <%= form_with model:@user, local: true do |f| %>
         <div class="form-group">
           <label for="name">Name</label><br>
