--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
-    <%= render 'layouts/user_info', userinfo: @current_user, create_book: @create_book %>
-    <div class="col-8 offset-1">
+    <%= render 'layouts/user_info', userinfo: @c_user, create_book: @create_book %>
+    <div class="col-md-8 offset-md-1">
       <h2>Users</h2>
       <table class="table">
         <tr><th>image</th><th>name</th><th></th></tr>
