--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <%= render 'layouts/user_info', userinfo: @current_user, create_book: @create_book %>
+    <%= render 'layouts/user_info', userinfo: @c_user, create_book: @create_book %>
     <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
       <table class="table">
