--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
   </head>
 
   <body>
-    <header>
-      <nav class="navbar bg-dark navbar-expand-lg">
+    <header class="mb-2">
+      <nav class="navbar bg-dark navbar-expand">
         <div class="container">
           <a href="/", class="navbar-brand text-white">Bookers</a>
           <ul class="navbar-nav">
@@ -58,7 +58,7 @@
     <p id="notice", class="text-success"><%= notice %></p>
     <%= yield %>
     <footer>
-      <div class="container">
+      <div class="container my-5">
         <p class="text-center">CopyRight Infratop.inc</p>
       </div>
     </footer>
