--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
-    <div class="col-5 mx-auto">
-      <h2>Editing Book</h2>
+    <div class="col-md-5 mx-auto">
+      <h1>Editing Book</h1>
         <% if @book.errors.any? %>
           <div class="text-danger", id="error_explanation">
             <h2><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
@@ -13,15 +13,15 @@
           </div>
         <%end%>
       <%= form_with model:@book, local: true do |f| %>
-        <div class="form-group">
-          <label>Name</label><br>
-          <%= f.text_field :title, autofocus: true %>
+        <div class="form-group my-3">
+          <label>Title</label><br>
+          <%= f.text_field :title, autofocus: true, size: 50 %>
         </div>
-        <div class="form-group">
+        <div class="form-group my-3">
           <label>Opinion</label><br>
-          <%= f.text_area :body, autofocus: true %>
+          <%= f.text_area :body, autofocus: true, size: "50x4" %>
         </div>
-        <%= f.submit "Update Book", class: "btn btn-secondary" %>
+        <%= f.submit "Update Book", class: "btn btn-success my-3" %>
       <% end %>
       <%= link_to "Show", book_path(@book.id) %> | <%= link_to "Back", books_path %>
     </div>
