--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,7 +7,7 @@
           <tr>
             <td>
               <%= link_to user_path(@book.user.id) do %>
-                <%= attachment_image_tag @user, :profile_image, :fill, 40, 40, fallback: "no_image.jpg", size:"40x40" %><br>
+                <%= attachment_image_tag @book.user, :profile_image, :fill, 40, 40, fallback: "no_image.jpg", size:"40x40" %><br>
                 <%= @book.user.name %>
               <% end %>
             </td>
