--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-5 mx-auto">
+    <div class="col-md-5 mx-auto">
       <h2>User info</h2>
         <% if @user.errors.any? %>
           <div class="text-danger", id="error_explanation">
@@ -13,17 +13,17 @@
           </div>
         <%end%>
       <%= form_with model:@user, local: true do |f| %>
-        <div class="form-group">
+        <div class="form-group my-3">
           <label for="name">Name</label><br>
-          <%= f.text_field :name, autofocus: true, id:"name" %>
+          <%= f.text_field :name, autofocus: true, id:"name", size: 50 %>
         </div>
-        <div class="form-group">
+        <div class="form-group my-3">
           <label for="image">Image</label><br>
           <%= f.attachment_field :profile_image, id:"image" %>
         </div>
-        <div class="form-group">
+        <div class="form-group my-3">
           <label for="introduction">Introduction</label><br>
-          <%= f.text_area :introduction, autofocus: true, id:"introduction" %>
+          <%= f.text_area :introduction, autofocus: true, id:"introduction", size: "50x2" %>
         </div>
         <%= f.submit "Update User", class: "btn btn-secondary" %>
       <% end %>
