--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -10,7 +10,7 @@
 <%end%>
 <div class="container">
   <div class="row">
-    <%= render 'layouts/user_info', userinfo: @c_user, create_book: @create_book %>
+    <%= render 'layouts/user_info', user: @user, create_book: @create_book %>
     <%= render 'layouts/list', books: @books %>
   </div>
 </div>
